@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.willowtv" name="Willow TV" version="1.4.2"
+<addon id="plugin.video.willowtv" name="Willow TV" version="1.4.3"
 	provider-name="AJ">
 	<requires>
 		<import addon="xbmc.python" version="1.0" />
